--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,63 @@
 body {
-}
-
-.wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /* grid-auto-rows: 1fr; */
-  /* grid-gap: 10px; */
+  min-height: 100vh;
+  grid-template-rows: min-content 1fr min-content;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+  
 }
 
-.logo {
+header {
   font: 'Lucinda Grande';
+  grid-row: 1;
   grid-column: 1/4;
-  height: 20vh;
-  margin: auto
+  height: 15vh;
+  margin: auto;
+  text-align: centre;
 }
 
-.navigation {
+nav {
+  grid-row: 2;
   grid-column: 1/4;
-  height: 10vh;
-  background-color: lightblue;
+  height: 7vh;
+  background-color: #333;
+  overflow: hidden;
+  
 }
 
-.mainContent {
+nav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+nav a.active {
+  background-color: rgb(231, 131, 49);
+  color: white;
+}
+
+main {
+  grid-row: 3
   grid-column: 1/3;
   height: 60vh;
 }
 
-.sideContent {
+aside {
+  grid-row: 3;
   grid-column: 3/4
 }
 
-.footer {
+footer {
+  grid-row: 4;
   grid-column: 1/4;
   height: 10vh;
-}
-
-/* .wrapper div:nth-child(even){
-  background: red;
-}
-
-.wrapper div:nth-child(odd){
-  background: green; */
-}
+} 
