--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,195 @@
-body {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  min-height: 100vh;
-  grid-template-rows: min-content 1fr min-content;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1rem;
-  
+html {
+  width: 100%;
+  height: 100%;
 }
 
-header {
-  font: 'Lucinda Grande';
+body {
+  background-color: rgb(37,37,37);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  display: grid;
+  grid-template: 40px 120px 400px 10px / repeat(3, minmax(90px, 1fr));
+  grid-auto-rows: minmax(autofit, auto);
+  grid-auto-columns: minmax(autofit, auto);
+  height: 100%;
+  margin: 10px 50px;
+}
+
+.logo {
   grid-row: 1;
-  grid-column: 1/4;
-  height: 15vh;
-  margin: auto;
-  text-align: centre;
+  grid-column: 1/2;
+  font-size: 25px;
+}
+
+.logo a {
+    color: white;
+    text-decoration: none;
 }
 
 nav {
-  grid-row: 2;
-  grid-column: 1/4;
-  height: 7vh;
-  background-color: #333;
-  overflow: hidden;
-  
+  grid-row: 1;
+  grid-column: 2/-1;
+  text-align: right;
 }
 
-nav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
+.menu a {
+  color: grey;
+  clear: right;
+  /* text-align: right; */
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  /* float: right;  */
 }
 
-nav a:hover {
-  background-color: #ddd;
-  color: black;
+.menu a:hover {
+  color: red;
 }
 
-nav a.active {
-  background-color: rgb(231, 131, 49);
-  color: white;
+.menu a.active {
+  color: red;
+}
+
+label {
+  /* margin: 0 100px 0 0; */
+  font-size: 26px;  
+  display: none;
+  width: 26px;
+  /* float: right; */
+}
+
+#toggle {
+  display: none;
+}
+
+header {
+  grid-row: 2;
+  grid-column: 1/-1;
+  /* height: 15vh; */
+  text-align: centre;
+}
+
+.link {
+  color: red;
+}
+
+header img {
+  padding-top: 10px;
+  margin: 0 auto;
+  float: right;
 }
 
 main {
-  grid-row: 3
-  grid-column: 1/3;
+  min-height: 100%;
+  grid-row: 3;
+  grid-column: 1/-1;
   height: 60vh;
+  margin-top: 1em;
 }
 
-aside {
-  grid-row: 3;
-  grid-column: 3/4
+.boxes_text-wrapper h2, p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.boxes > * {
+  padding: .5rem;
+  background-color: #333;
+  color: white;
+}
+
+.boxes {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: auto;
+  grid-auto-rows: minmax(auto, auto);
+  grid-gap: 10px;
+}
+
+.boxes li {
+  display: flex;
+  align-items: flex-end;
+}
+
+.left {
+  background-image: 
+    linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
+    url('img/rebel_base.jpg');
+  background-size: cover;
+}
+
+.center {
+  background-image: 
+    linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
+    url('img/death_star.png');
+  background-size: cover;
+}
+
+.right {
+  background-image: 
+    linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
+    url('img/darth_vader.jpg');
+  background-size: cover;
 }
 
 footer {
-  grid-row: 4;
-  grid-column: 1/4;
-  height: 10vh;
+  grid-column: 1/-1;
+  margin: 0 auto;
+  margin-top: 2em;
+  font-size: smaller;
 } 
+
+/* @media screen and (min-width: 40em) {
+  .boxes {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
+} */
+
+@media only screen and (max-width: 700px) {
+  body {
+    grid-auto-rows: min-content;
+    grid-template-rows: auto;
+    grid-template-columns: minmax(300px, 1fr);
+  }
+
+  .boxes {
+    grid-template-columns: 1fr;
+    /* grid-template-rows: minmax(autofill, 100px); */
+    grid-auto-columns: minmax(300px, auto);
+    grid-auto-rows: minmax(300px, auto);
+  }
+  
+  label {
+    display: block;
+    cursor: pointer;
+  }
+  
+  .menu {
+    text-align: center;
+    grid-row: 2;
+    grid-column: 1 / -1;
+    width: 100%;
+    display: none;
+  }
+
+  .menu a {
+    display: block;
+    border-bottom: 1px solid white;
+    margin: 0;
+  }
+
+  #toggle:checked + .menu {
+    display: block;
+  }
+
+  footer {
+    grid-row: 10;
+  }
+}
