--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,7 @@ body {
   color: white;
   display: grid;
   grid-template: 40px 120px 400px 10px / repeat(3, minmax(90px, 1fr));
-  grid-auto-rows: minmax(autofit, auto);
-  grid-auto-columns: minmax(autofit, auto);
-  height: 100%;
+  min-height: 100%;
   margin: 10px 50px;
 }
 
@@ -19,6 +17,7 @@ body {
   grid-row: 1;
   grid-column: 1/2;
   font-size: 25px;
+  width: 200px;
 }
 
 .logo a {
@@ -35,11 +34,9 @@ nav {
 .menu a {
   color: grey;
   clear: right;
-  /* text-align: right; */
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  /* float: right;  */
 }
 
 .menu a:hover {
@@ -51,11 +48,9 @@ nav {
 }
 
 label {
-  /* margin: 0 100px 0 0; */
   font-size: 26px;  
   display: none;
   width: 26px;
-  /* float: right; */
 }
 
 #toggle {
@@ -65,7 +60,6 @@ label {
 header {
   grid-row: 2;
   grid-column: 1/-1;
-  /* height: 15vh; */
   text-align: centre;
 }
 
@@ -83,7 +77,6 @@ main {
   min-height: 100%;
   grid-row: 3;
   grid-column: 1/-1;
-  height: 60vh;
   margin-top: 1em;
 }
 
@@ -108,7 +101,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-columns: auto;
-  grid-auto-rows: minmax(auto, auto);
+  grid-auto-rows: auto;
   grid-gap: 10px;
 }
 
@@ -139,35 +132,27 @@ ul {
 }
 
 footer {
+  grid-row: 4;
   grid-column: 1/-1;
   margin: 0 auto;
   margin-top: 2em;
   font-size: smaller;
 } 
 
-/* @media screen and (min-width: 40em) {
-  .boxes {
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-  }
-} */
-
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 525px) {
   body {
-    grid-auto-rows: min-content;
-    grid-template-rows: auto;
-    grid-template-columns: minmax(300px, 1fr);
-  }
+    grid-template: repeat(4, min-content) / minmax(300px, auto) 26px;
 
+  }
+  
   .boxes {
     grid-template-columns: 1fr;
-    /* grid-template-rows: minmax(autofill, 100px); */
-    grid-auto-columns: minmax(300px, auto);
-    grid-auto-rows: minmax(300px, auto);
+    grid-template-rows: repeat(3, 300px);
   }
   
   label {
-    display: block;
+    display: flex;
+    flex: auto;
     cursor: pointer;
   }
   
@@ -187,9 +172,5 @@ footer {
 
   #toggle:checked + .menu {
     display: block;
-  }
-
-  footer {
-    grid-row: 10;
   }
 }
